force-app/main/default/objects/Review_Dispute__c/Review_Dispute__c.object-meta.xml
<CustomObject>
    <description>Tracks disputes raised against reviews.</description>
    <label>Review Dispute</label>
    <pluralLabel>Review Disputes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>