force-app/main/default/objects/Review_Dispute__c/fields/Disputant__c.field-meta.xml
<CustomField>
    <fullName>Disputant__c</fullName>
    <description>User submitting the dispute.</description>
    <label>Disputant</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Disputant Disputes</relationshipLabel>
    <relationshipName>Disputant_Disputes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>