force-app/main/default/objects/Review_Dispute__c/fields/Mediation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Mediation_Notes__c</fullName>
    <description>Mediator notes and outcomes.</description>
    <label>Mediation Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>