force-app/main/default/objects/Review_Dispute__c/fields/Property_Review__c.field-meta.xml
<CustomField>
    <fullName>Property_Review__c</fullName>
    <description>Review being disputed.</description>
    <label>Property Review</label>
    <referenceTo>Property_Review__c</referenceTo>
    <relationshipLabel>Disputes</relationshipLabel>
    <relationshipName>Disputes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>